# codox

./: .continue-here.md  CHANGELOG.md  CMakeLists.txt  CODOX-TRACKER.md  phase-3.2-report.json
.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-ui-test.html  v4-ui.yaml  v5-ui-test.html  v5-ui.yaml  v6-CMakeLists-SNIPPET.txt  v6-PluginEditor.cpp  v6-PluginEditor.h  v6-integration-checklist.md  v6-ui-test.html  v6-ui.yaml
Source/: EffectsChain.h  FilterBank.h  LFO.h  ModulationMatrix.h  NoiseOscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SubOscillator.h  Voice.h  Wavetable.h  WavetableOscillator.h
Source/ui/public/: index.html
